--- a/Extract_Features.ipynb
+++ b/Extract_Features.ipynb
@@ -2,23 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
     "from sklearn import svm\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
     "import glob\n",
     "import functools\n",
-    "import matplotlib.pyplot as plt\n",
-    "import imutils\n",
-    "from PIL import Image, ImageEnhance\n",
-    "from sklearn import svm\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from skimage.feature import local_binary_pattern\n",
-    "from sklearn.preprocessing import normalize\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "import timeit\n",
     "import pickle\n",
@@ -34,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,12 +69,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
+    "Male_training_data='Dataset/Males/Males/*.jpg'\n",
+    "Female_training_data='Dataset/Females/Females/*.jpg'\n",
+    "'''\n",
     "Male_training_data='Data_split/train/Males/*.jpg'\n",
     "Female_training_data='Data_split/train/Females/*.jpg'\n",
+    "'''\n",
     "Male_testing_data='Data_split/test/Males/*.jpg'\n",
     "Female_testing_data='Data_split/test/Females/*.jpg'"
    ]
@@ -95,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,23 +423,23 @@
     "def analyse_performance(svm_clf,std_scaler):\n",
     "    #open 2-files to write the output in them\n",
     "    results_file = open_file(\"results.txt\")\n",
-    "    time_file = open_file(\"time.txt\")\n",
+    "    time_file = open_file(\"times.txt\")\n",
     "    m_correct, m_count, f_correct, f_count = 0,0,0,0\n",
     "    #testing all test images\n",
-    "    for file in glob.glob(Male_testing_data):    \n",
+    "    for file in sorted(glob.glob(Male_testing_data)):    \n",
     "        img = cv2.imread(file)  #read male images\n",
     "        time,value = function_timer(svm_test, svm_clf, std_scaler, img)\n",
     "        write_in_file(time_file,time)\n",
-    "        write_in_file(results_file,value)\n",
+    "        write_in_file(results_file,int(value))\n",
     "        m_count+=1\n",
     "        if value == 1:\n",
     "            m_correct+=1\n",
     "\n",
-    "    for file in glob.glob(Female_testing_data):    \n",
+    "    for file in sorted(glob.glob(Female_testing_data)):    \n",
     "        img = cv2.imread(file)  #read female images\n",
     "        time,value = function_timer(svm_test, svm_clf, std_scaler, img)\n",
     "        write_in_file(time_file,time)\n",
-    "        write_in_file(results_file,value)\n",
+    "        write_in_file(results_file,int(value))\n",
     "        f_count+=1\n",
     "        if value == 0:\n",
     "            f_correct+=1\n",
@@ -462,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,10 +500,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "61cd7f7fd9e0050b53f5133f68e0d7220a96757240819c32c034789a574c6503"
+   "hash": "e0d277ff71215bc2e00e65dbe1083bb095effc9738a74808cbcc90b6ef0d8026"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('anaconda3')",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
